node api url update commit

--- a/.env
+++ b/.env
@@ -58,7 +58,7 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-personal_node=https://api.blockchain.lesoftvps.com/api/
+personal_node=https://ydx-node-api.onrender.com/api/
 oldlink=https://trustwalletapi-f312b276a87b.herokuapp.com/api/
 erc20_usdt_contract_address=0xdac17f958d2ee523a2206206994597c13d831ec7
 trc20_usdt_contract_address=TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t
