--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,12 +34,12 @@ jobs:
             if [ -d "${TARGET_DIR}/.git" ]; then
               echo "Repo exists — pulling latest"
               cd "${TARGET_DIR}"
-              GIT_SSH_COMMAND="ssh -i ~/github_ydx_api -o StrictHostKeyChecking=no" git fetch origin main --depth=1
-              GIT_SSH_COMMAND="ssh -i ~/github_ydx_api -o StrictHostKeyChecking=no" git reset --hard origin/main
+              GIT_SSH_COMMAND="ssh -i ~/github_ydx -o StrictHostKeyChecking=no" git fetch origin main --depth=1
+              GIT_SSH_COMMAND="ssh -i ~/github_ydx -o StrictHostKeyChecking=no" git reset --hard origin/main
             else
               echo "Cloning repo fresh"
               rm -rf "${TARGET_DIR}" || true
-              GIT_SSH_COMMAND="ssh -i ~/github_ydx_api -o StrictHostKeyChecking=no" git clone --depth=1 "${REPO_URL}" "${TARGET_DIR}"
+              GIT_SSH_COMMAND="ssh -i ~/github_ydx -o StrictHostKeyChecking=no" git clone --depth=1 "${REPO_URL}" "${TARGET_DIR}"
             fi
 
             echo "Deploy complete!"
