--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:PEwtssGd2kXFyzzYN/qjOqQ15AzSoZmpHsBXkNCSRXs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://ydx.hamidentify.dev/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ydxwalletdb
 DB_USERNAME=ydxadmin
-DB_PASSWORD=U8Wb0rsVAWmQ7S99V9PT
+DB_PASSWORD=SGzLeBS1i5v6ankQnUEa
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
